--- a/src/SerialLoops/Assets/Strings.resx
+++ b/src/SerialLoops/Assets/Strings.resx
@@ -2807,4 +2807,7 @@ This action is irreversible.</value>
   <data name="Search Project" xml:space="preserve">
     <value>Search Project</value>
   </data>
+  <data name="Ignore Hash?" xml:space="preserve">
+    <value>Ignore Hash?</value><comment>This is in the project import dialog and indicates the ROM hash should be ignored</comment>
+  </data>
 </root>
