--- a/src/SerialLoops/Assets/Strings.resx
+++ b/src/SerialLoops/Assets/Strings.resx
@@ -2903,4 +2903,10 @@ This action is irreversible.</value>
   <data name="Export Source Preview" xml:space="preserve">
     <value>Export Source Preview</value><comment>Button that exports a preview of the current source image of a particular layout entry</comment>
   </data>
+  <data name="Create ASM Hack" xml:space="preserve">
+    <value>Create ASM Hack</value>
+  </data>
+  <data name="Select Hack Files" xml:space="preserve">
+    <value>Select Hack Files</value>
+  </data>
 </root>
