Make the save editor work as a standalone feature as well (#437)

--- a/src/SerialLoops/Assets/Strings.resx
+++ b/src/SerialLoops/Assets/Strings.resx
@@ -2912,6 +2912,18 @@ This action is irreversible.</value>
   <data name="Archive_Filename" xml:space="preserve">
     <value>Archive Filename</value>
   </data>
+  <data name="Temporary Project Already Exists!" xml:space="preserve">
+    <value>Temporary Project Already Exists!</value>
+  </data>
+  <data name="In order to edit this save file, Serial Loops needs to make a temporary project. However, a project called &quot;{0}&quot; already exists. Would you like to overwrite this project?" xml:space="preserve">
+    <value>In order to edit this save file, Serial Loops needs to make a temporary project. However, a project called "{0}" already exists. Would you like to overwrite this project?</value>
+  </data>
+  <data name="Save Save File" xml:space="preserve">
+    <value>Save Save File</value>
+  </data>
+  <data name="Close Save File" xml:space="preserve">
+    <value>Close Save File</value>
+  </data>
   <data name="Ignore Hash?" xml:space="preserve">
     <value>Ignore Hash?</value><comment>This is in the project import dialog and indicates the ROM hash should be ignored</comment>
   </data>
