--- a/src/SerialLoops/Assets/Strings.resx
+++ b/src/SerialLoops/Assets/Strings.resx
@@ -3059,4 +3059,10 @@ This action is irreversible.</value>
   <data name="No Character" xml:space="preserve">
     <value>None</value>
   </data>
+  <data name="Export Item Image" xml:space="preserve">
+    <value>Export Item Image</value>
+  </data>
+  <data name="Import Item Image" xml:space="preserve">
+    <value>Import Item Image</value>
+  </data>
 </root>
