--- a/src/SerialLoops/Assets/Strings.resx
+++ b/src/SerialLoops/Assets/Strings.resx
@@ -3074,4 +3074,16 @@ This action is irreversible.</value>
   <data name="Normalize" xml:space="preserve">
     <value>Normalize</value><comment>As in "normalize the audio volume so that max volume is similar to all other audio volumes"</comment>
   </data>
+  <data name="Y_TOP" xml:space="preserve">
+    <value>Top</value>
+  </data>
+  <data name="Y_BELOW_TOP" xml:space="preserve">
+    <value>Below Top</value>
+  </data>
+  <data name="Y_ABOVE_BOTTOM" xml:space="preserve">
+    <value>Above Bottom</value>
+  </data>
+  <data name="Y_BOTTOM" xml:space="preserve">
+    <value>Bottom</value>
+  </data>
 </root>
