--- a/src/SerialLoops/Assets/Strings.pt-BR.resx
+++ b/src/SerialLoops/Assets/Strings.pt-BR.resx
@@ -304,7 +304,7 @@
   <data name="Check for Updates on Startup" xml:space="preserve">
     <value>Procurar por Atualizações ao Abrir</value>
   </data>
-  <data name="Clear Block" xml:space="preserve">
+  <data name="Clear Section" xml:space="preserve">
     <value>Seção de Vitória</value>
   </data>
   <data name="Apply Template" xml:space="preserve">
