--- a/src/SerialLoops/Assets/Strings.en-GB.resx
+++ b/src/SerialLoops/Assets/Strings.en-GB.resx
@@ -404,7 +404,7 @@
   <data name="Clear all commands from the game scenario?\nThis action is irreversible." xml:space="preserve">
     <value>Clear all commands from the game scenario?\nThis action is irreversible.</value>
   </data>
-  <data name="Clear Block" xml:space="preserve">
+  <data name="Clear Section" xml:space="preserve">
     <value>Win Section</value>
   </data>
   <data name="Clear Scenario" xml:space="preserve">
@@ -1265,10 +1265,10 @@
   <data name="Mikuru Time Percentage" xml:space="preserve">
     <value>Mikuru Time Percentage</value>
   </data>
-  <data name="Miss 2 Block" xml:space="preserve">
+  <data name="Miss 2 Section" xml:space="preserve">
     <value>Lose 2 Section</value>
   </data>
-  <data name="Miss Block" xml:space="preserve">
+  <data name="Miss Section" xml:space="preserve">
     <value>Lose Section</value>
   </data>
   <data name="Missing:" xml:space="preserve">
@@ -1802,8 +1802,8 @@
   <data name="Script" xml:space="preserve">
     <value>Script</value>
   </data>
-  <data name="Script Block:" xml:space="preserve">
-    <value>Block: </value>
+  <data name="Script Section:" xml:space="preserve">
+    <value>Section: </value>
   </data>
   <data name="Script Position" xml:space="preserve">
     <value>Script Position</value>
