--- a/src/SerialLoops/Assets/Strings.resx
+++ b/src/SerialLoops/Assets/Strings.resx
@@ -3074,6 +3074,9 @@ This action is irreversible.</value>
   <data name="Normalize" xml:space="preserve">
     <value>Normalize</value><comment>As in "normalize the audio volume so that max volume is similar to all other audio volumes"</comment>
   </data>
+  <data name="Migrate" xml:space="preserve">
+    <value>Migrate</value>
+  </data>
   <data name="View Crash Log" xml:space="preserve">
     <value>View Crash Log</value>
   </data>
